fix: horizontal scrollbar

--- a/app/sub-styles.css
+++ b/app/sub-styles.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content:center;
     gap: 1rem;
-    padding: 1rem;
+    padding-block: 1rem;
     background-color: #1d272c;;
 }
 
